# taxi_prediction_fullstack_Leo_Lindqvist

./: README.md  pyproject.toml
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/frontend/: app.py
src/taxipred/model_development/: eda.ipynb  feature_names.joblib  model.joblib  model_dev.ipynb
src/taxipred/utils/: constants.py
