[project]
name = "taxipred"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LeoLindqvist123", email = "leolikro01@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "joblib",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
taxipred = "taxipred:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "taxipred",
]
